<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnStorage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blackBackground"
            android:text="@string/storage_title"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blackBackground"
            android:text="@string/location_title"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blackBackground"
            android:text="@string/camera_title"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blackBackground"
            android:text="@string/phone_title"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnContacts"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blackBackground"
            android:text="@string/contacts_title"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>